<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:columnCount="2">

        <!--<Button
            android:id="@+id/bt_bind_service"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_bind_service"
            android:textAllCaps="false"/>-->

        <Button
            android:id="@+id/bt_get_nubia_token"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_get_nubia_token"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/bt_get_baidu_token"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_get_baidu_token"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/bt_get_baidu_uid"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_get_baidu_uid"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/bt_bind_baidu"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_bind_baidu"
            android:textAllCaps="false"/>

     <!--   <Button
            android:id="@+id/bt_refresh_baidu_token"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_refresh_baidu_token"
            android:textAllCaps="false"/>-->

        <Button
            android:id="@+id/bt_login"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_login"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/bt_get_nubia_token_key"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_get_nubia_token_key"
            android:textAllCaps="false"/>

    </GridLayout>

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/response_default"/>

    <LinearLayout
        android:id="@+id/ll_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:labelFor="@+id/tv_username"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:labelFor="@+id/tv_password"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_confirm"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>
