<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <GridLayout
        android:id="@+id/gl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:columnCount="2">

        <!--   <Button
               android:id="@+id/bt_bind_service"
               style="@style/button_style"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/bt_bind_service"
               android:textAllCaps="false"/>-->

        <Button
            android:id="@+id/bt_to_get_info"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_account_info"
            android:textAllCaps="false"/>

        <requestFocus/>

        <Button
            android:id="@+id/bt_get_cloud_space"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_space_info"
            android:textAllCaps="false"/>

    </GridLayout>

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gl"
        android:layout_marginTop="30dp"
        android:text="@string/response_default"/>

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_name"/>

</RelativeLayout>
